# raytracing

./: Cargo.toml
src/: display.rs  element.rs  main.rs  renderer.rs  vec2.rs  vec3.rs
src/light/: ambient.rs  mod.rs  point.rs
src/math/: euler.rs  mat4.rs  mod.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/object/: mod.rs  sphere.rs
