[package]
name = "society"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bracket-color = "0.8.7"
cfg-if = "1.0.0"
cstr = "0.2.11"
rayon = "1.6.1"

[target.'cfg(windows)'.dependencies]
powershell_script = "1.0.4"
